--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "dratex.doc.tar.xz": 62e2a485b189efe42862f322e2cec038f50af5f1
-  "dratex.tar.xz": 23b9613efa57b18918ad6c81827a8291352b8af5
+  dratex.doc.tar.xz: 13e6ac0b9f66596655138358554847e2ea9391da
+  dratex.tar.xz: eccc41f656e292240028a90a2c09b0b9be7ae10b
