--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  dratex.doc.tar.xz: 21bc422c7a120f830380f04c65852a1163964e8f
-  dratex.tar.xz: bac130bb04cbf9b98587817ac797c0f20f2eec35
+  dratex.doc.r15878.tar.xz: 3be8ff170bebdce3544c8f1b97401e230ca6ee91
+  dratex.r15878.tar.xz: 0d61d7f7fb9e67c97d9aee946a014cc27d23a708
